email de recuperaçao de senha

--- a/api_server/templates/reset_password.html
+++ b/api_server/templates/reset_password.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ativação de conta</title>
+  <title>Reset password</title>
   <style>
     * {
       margin: 0;
@@ -30,11 +30,13 @@
       flex-direction: column;
       justify-content: center;
     }
+
     .container .title {
       font-size: 2em;
       font-weight: 100;
       color: #009688;
     }
+
     .container p {
       margin: 16px 0;
     }
@@ -43,17 +45,17 @@
 
 <body>
   <div class="container">
-    <p class="title">E-mail de ativação de conta</p>
+    <p class="title">E-mail de recuperação de senha</p>
     <p class="info">
     <p>Copiar</p>
-    <a href='{{ api_url }}/login/verify?token={{ token }}'>
-      {{ api_url }}/login/verify?token={{ token }}
+    <a href='{{ api_url }}/login/new_password?token={{ token }}'>
+      {{ api_url }}/login/new_password?token={{ token }}
     </a>
     </p>
     <p class="info">
       <span class="link">
-        Para ativar seu cadastro acesse este
-        <a href='{{ api_url }}/login/verify?token={{ token }}'>link</a>
+        Para cadastrar nova senha
+        <a href='{{ api_url }}/login/new_password?token={{ token }}'>link</a>
       </span>
     </p>
   </div>
